# robot_immersive_head

head_controller/: package.xml
head_controller/config/: head_mapping_cfg.yaml  head_motor_cfg.yaml  motor_cfg.yaml
head_controller/launch/: head_controller.launch  head_receiver.launch
head_controller/scripts/: head_controller.py
immersive/: package.xml
immersive/launch/: bringup.launch  immersive_control.launch  immersive_receiver.launch  joy_controller.launch  key_controller.launch
quadrotor_controller/: package.xml
quadrotor_controller/launch/: simulation.launch
vision_controller/: package.xml
vision_controller/launch/: publish_stereo (raphael's conflicted copy 2014-08-11).launch  publish_stereo.launch
vision_controller/scripts/: stereo_vision.py  video.py
