<?xml version="1.0"?>
<package>
  <name>head_controller</name>
  <version>0.0.0</version>
  <description>The head_controller package</description>

  <maintainer email="ramonmelo@todo.todo">ramonmelo</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
